[package]
name = "rust-bbc"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.6"
config = "0.13.3"
env_logger = "0.10.0"
futures = "0.3.31"
log = "0.4.27"
rovkit = "0.0.1"
